--- a/app/components/admin/save_bar_component.html.erb
+++ b/app/components/admin/save_bar_component.html.erb
@@ -1,4 +1,4 @@
-<div class="sticky bottom-0 bg-base-200 border-t border-base-300 py-4 px-4 sm:px-6 -mx-4 sm:-mx-6 mt-6 shadow-[0_-4px_20px_-4px_rgba(0,0,0,0.15)]"
+<div class="sticky bottom-0 z-40 bg-base-200 border-t border-base-300 py-4 px-4 sm:px-6 -mx-4 sm:-mx-6 mt-6 shadow-[0_-4px_20px_-4px_rgba(0,0,0,0.15)]"
      <%= tag.attributes(data: stimulus_data_attributes) %>>
   <% if multi_step? %>
     <div class="flex items-center justify-between gap-4">
