style(neighbourhood-card): Use X icon instead of trash for consistency

--- a/app/components/admin/neighbourhood_card_component.html.erb
+++ b/app/components/admin/neighbourhood_card_component.html.erb
@@ -38,7 +38,7 @@
       </div>
 
       <% if show_remove && form %>
-        <%= helpers.nested_form_remove_link(form, icon(:trash, size: '4'), class: 'btn btn-ghost btn-sm btn-square text-error') %>
+        <%= helpers.nested_form_remove_link(form, icon(:x, size: '4'), class: 'btn btn-ghost btn-sm btn-square text-base-content/40 hover:text-error hover:bg-error/10') %>
       <% end %>
     </div>
   </div>
