fix(neighbourhood-card): Vertically center remove button

--- a/app/components/admin/neighbourhood_card_component.html.erb
+++ b/app/components/admin/neighbourhood_card_component.html.erb
@@ -7,7 +7,7 @@
       </h3>
     <% end %>
 
-    <div class="flex items-start justify-between gap-2">
+    <div class="flex items-center justify-between gap-2">
       <div class="flex-1">
         <%# Current neighbourhood - displayed prominently %>
         <%= link_to helpers.admin_neighbourhood_path(neighbourhood),
