refactor(components): Extract ViewComponents from admin partials
- Add FormCardComponent for consistent card wrappers with icon, title, description
- Add OpeningTimesComponent for interactive opening times editor
- Add AddressFieldsComponent for nested address form fields with Stimulus
- Add InfoCardComponent for compact info cards on show pages
- Add RelatedItemsListComponent for related items with edit links

Updated views to use new components:
- partners/_form_tab_location.html.erb
- partners/_form_tab_contact.html.erb
- partners/_form_tab_calendars.html.erb
- sites/_form_tab_neighbourhoods.html.erb
- sites/show.html.erb
- calendars/show.html.erb
- calendars/_form_tab_source.html.erb
- calendars/_form_tab_contact.html.erb
- users/_form_tab_roles.html.erb
- users/_form_tab_settings.html.erb

--- a/app/views/admin/calendars/_form_tab_contact.html.erb
+++ b/app/views/admin/calendars/_form_tab_contact.html.erb
@@ -8,24 +8,22 @@
 <% end %>
 
 <div class="max-w-xl">
-  <div class="card bg-base-200/50 border border-base-300">
-    <div class="card-body p-4 gap-4">
-      <fieldset class="fieldset">
-        <legend class="fieldset-legend"><%= attr_label(:calendar, :public_contact_name) %></legend>
-        <%= f.input_field :public_contact_name, class: 'input input-bordered input-sm w-full bg-base-100' %>
-      </fieldset>
+  <%= render Admin::FormCardComponent.new(icon: :phone, title: t('admin.sections.public_contact')) do %>
+    <fieldset class="fieldset">
+      <legend class="fieldset-legend"><%= attr_label(:calendar, :public_contact_name) %></legend>
+      <%= f.input_field :public_contact_name, class: 'input input-bordered input-sm w-full bg-base-100' %>
+    </fieldset>
 
-      <fieldset class="fieldset">
-        <legend class="fieldset-legend"><%= attr_label(:calendar, :public_contact_email) %></legend>
-        <%= f.input_field :public_contact_email, class: 'input input-bordered input-sm w-full bg-base-100',
-            'data-validate-email': 'true',
-            'data-validate-email-message': t('admin.hints.email_validation') %>
-      </fieldset>
+    <fieldset class="fieldset">
+      <legend class="fieldset-legend"><%= attr_label(:calendar, :public_contact_email) %></legend>
+      <%= f.input_field :public_contact_email, class: 'input input-bordered input-sm w-full bg-base-100',
+          'data-validate-email': 'true',
+          'data-validate-email-message': t('admin.hints.email_validation') %>
+    </fieldset>
 
-      <fieldset class="fieldset">
-        <legend class="fieldset-legend"><%= attr_label(:calendar, :public_contact_phone) %></legend>
-        <%= f.input_field :public_contact_phone, class: 'input input-bordered input-sm w-full bg-base-100' %>
-      </fieldset>
-    </div>
-  </div>
+    <fieldset class="fieldset">
+      <legend class="fieldset-legend"><%= attr_label(:calendar, :public_contact_phone) %></legend>
+      <%= f.input_field :public_contact_phone, class: 'input input-bordered input-sm w-full bg-base-100' %>
+    </fieldset>
+  <% end %>
 </div>
