--- a/app/views/admin/partners/_opening_times.html.erb
+++ b/app/views/admin/partners/_opening_times.html.erb
@@ -1,50 +1,1 @@
-<%# We only use the active record helpers on the part of the form that will be submitted %>
-<%# Everything else is written in HTML so that the syntax matches the stimulus docs %>
-
-<div data-controller="opening-times" data-opening-times-data-value='<%= @partner.opening_times_data %>'>
-  <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
-    <%# Current times - left side %>
-    <div class="bg-base-200 rounded-lg p-4 min-h-40">
-      <div data-opening-times-target="list" class="space-y-2">
-        <%# Items rendered by Stimulus controller %>
-      </div>
-      <p data-opening-times-target="empty" class="text-base-content/50 italic text-center py-6 <%= @partner.opening_times.present? ? 'hidden' : '' %>">No opening times set yet</p>
-    </div>
-
-    <%# Add new time - right side %>
-    <div class="space-y-3">
-      <div class="form-control">
-        <label class="label"><span class="label-text font-medium"><%= t('admin.opening_times.day') %></span></label>
-        <select class="select select-bordered w-full" data-opening-times-target="day">
-          <% # Rails date.day_names starts with Sunday, reorder for Monday-Sunday %>
-          <% day_names = I18n.t('date.day_names') %>
-          <% [1, 2, 3, 4, 5, 6, 0].each do |i| %>
-            <option value="<%= day_names[i] %>"><%= day_names[i] %></option>
-          <% end %>
-        </select>
-      </div>
-
-      <div class="grid grid-cols-2 gap-3">
-        <div class="form-control">
-          <label class="label"><span class="label-text font-medium"><%= t('admin.opening_times.opens') %></span></label>
-          <input class="input input-bordered w-full" type="time" value="09:00" data-opening-times-target="open">
-        </div>
-        <div class="form-control">
-          <label class="label"><span class="label-text font-medium"><%= t('admin.opening_times.closes') %></span></label>
-          <input class="input input-bordered w-full" type="time" value="17:00" data-opening-times-target="close">
-        </div>
-      </div>
-
-      <label class="label cursor-pointer justify-start gap-3">
-        <input class="checkbox checkbox-warning" type="checkbox" data-opening-times-target="allDay" data-action="change->opening-times#allDay">
-        <span class="label-text"><%= t('admin.opening_times.all_day') %></span>
-      </label>
-
-      <button data-action="click->opening-times#addOpeningTime" type="button" class="btn bg-placecal-orange hover:bg-orange-600 text-white border-placecal-orange w-full">
-        Add Opening Time
-      </button>
-    </div>
-  </div>
-
-  <%= f.text_area :opening_times, data: { opening_times_target: "textarea" }, hidden: true %>
-</div>
+<%= render Admin::OpeningTimesComponent.new(form: f, partner: @partner) %>
