--- a/app/components/admin/info_card_component.html.erb
+++ b/app/components/admin/info_card_component.html.erb
@@ -2,7 +2,7 @@
   <div class="card-body p-4">
     <div class="flex items-center gap-3">
       <div class="w-10 h-10 rounded-lg <%= icon_bg_class %> flex items-center justify-center shrink-0">
-        <%= icon(icon, size: '5', css_class: icon_text_class) %>
+        <%= icon(icon_name, size: '5', css_class: icon_text_class) %>
       </div>
       <div>
         <p class="text-xs text-base-content/60 uppercase font-medium"><%= label %></p>
