--- a/app/components/admin/address_fields_component.html.erb
+++ b/app/components/admin/address_fields_component.html.erb
@@ -4,30 +4,12 @@
        data-partner-address-partner-id-value="<%= partner.id %>"
        data-partner-address-warn-of-delisting-value="<%= warn_of_delisting_value %>">
 
-    <fieldset class="fieldset">
-      <legend class="fieldset-legend"><%= attr_label(:address, :street_address) %></legend>
-      <%= address_form.input_field :street_address, class: 'input input-bordered w-full bg-base-100 address_field' %>
-    </fieldset>
-
-    <fieldset class="fieldset">
-      <legend class="fieldset-legend"><%= attr_label(:address, :street_address_2) %></legend>
-      <%= address_form.input_field :street_address2, class: 'input input-bordered w-full bg-base-100 address_field' %>
-    </fieldset>
-
-    <fieldset class="fieldset">
-      <legend class="fieldset-legend"><%= attr_label(:address, :street_address_3) %></legend>
-      <%= address_form.input_field :street_address3, class: 'input input-bordered w-full bg-base-100 address_field' %>
-    </fieldset>
-
-    <fieldset class="fieldset">
-      <legend class="fieldset-legend"><%= attr_label(:address, :city) %></legend>
-      <%= address_form.input_field :city, class: 'input input-bordered w-full bg-base-100 address_field' %>
-    </fieldset>
-
-    <fieldset class="fieldset">
-      <legend class="fieldset-legend"><%= attr_label(:address, :postcode) %></legend>
-      <%= address_form.input_field :postcode, class: 'input input-bordered w-full bg-base-100 address_field' %>
-    </fieldset>
+    <% address_fields.each do |field_config| %>
+      <fieldset class="fieldset">
+        <legend class="fieldset-legend"><%= attr_label(:address, field_config[:label_key]) %></legend>
+        <%= address_form.input_field field_config[:field], class: 'input input-bordered w-full bg-base-100 address_field' %>
+      </fieldset>
+    <% end %>
 
     <div data-partner-address-target="addressInfoArea" class="mt-4">
       <% if can_clear_address? %>
