--- a/app/components/admin/error_component.html.erb
+++ b/app/components/admin/error_component.html.erb
@@ -1,8 +1,6 @@
 <% if errors_present? %>
   <div id="form-errors" role="alert" class="alert alert-error mb-3 shadow-lg items-start">
-    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 shrink-0 stroke-current mt-0.5" fill="none" viewBox="0 0 24 24">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
-    </svg>
+    <%= icon(:warning, size: '6', css_class: 'shrink-0 mt-0.5') %>
     <div>
       <h3 class="font-bold"><%= t('activerecord.errors.template.header', count: error_count, model: model_name) %></h3>
       <ul class="mt-2 ml-3 text-sm list-disc list-inside space-y-0.5">
